# vibe

./: .eslintrc.js.backup  .eslintrc.release.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .release_check  .releaserc.json  .vibe-preferences  .vibe.example.yaml  .vibe.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENT_SUMMARY.md  LINTING_CONFIG_UPDATE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  README.md  SELF_HOSTING.md  TROUBLESHOOTING.md  commit_msg.txt  debug_step_validation.py  demo_self_hosting.sh  eslint.config.mjs  knip.json  main.py  package-lock.json  package.json  pyproject.toml  temp_ruff.toml  test_checklist_api.py  test_config.yaml  test_config_loading.py  test_mcp.py  test_monitoring_system.py  test_suffix.yaml  tsconfig.json  vitest.config.ts  workflow_reference.md
.github/: README.md  copilot-instructions.md
.husky/: pre-commit
coverage/: coverage-final.json  index.html
data/: README.md
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  README.md  beachside-integration.md  development-guidelines.md  language-standards.md  mcp-integration.md  mcp-workflow-server.md  phase-2-completion.md  project-integration.md  project-linting.md  python-release-pipeline.md  unused-dependencies.md  workflow-architecture.md
examples/: session_monitoring_demo.py
mcp-server/: README.md  index.js  package-lock.json  package.json  test-lint.js  test.js  test_checklist_tools.js  vscode-mcp-config.json
scripts/: README.md  analyze_repository_sprawl.py  analyze_workflows.py  check-emojis.py  convert-workflows.sh  refactor_workflows.py  restructure_repository.py  structure_analysis.py  syncVersions.js  sync_versions.py
src/: analyzer.ts  cli.ts  config.ts  errors.ts  lint.ts  logging.ts  mcp-server.ts  models.ts  orchestrator.ts  plan.ts  schemas.ts  session.ts  sessionMonitor.ts  session_monitor.ts  workflow-registry.ts  workflows.ts
tests/: README.md  testBasic.test.ts  testChecklists.test.ts  testCli.test.ts  testConfig.test.ts  testConfigRefactored.test.ts  testErrorHandling.test.ts  testHotReloading.test.ts  testLint.test.ts  testLogging.test.ts  testMcp.test.ts  testMcpServer.test.ts  testMonitoringSystem.test.ts  testNestedWorkflows.test.ts  testPlan.test.ts  testPlanBatch.test.ts  testSchemaValidation.test.ts  testSession.test.ts  testSessionLocation.test.ts  testSessionMonitor.test.ts  testWorkflowRegistry.test.ts  testWorkflowYamlQuality.test.ts  test_basic.py  test_checklists.py  test_checklists.test.ts  test_cli.py  test_cli_lint.py  test_cli_validation.py  test_config.test.ts  test_hot_reloading.py  (+11 more)
(+444 files in other folders)
